// Vitest Snapshot v1

exports[`test eslint > alreadySplitted > fixed 1`] = `
"
    import { Fragment } from 'react'
    import cs from 'classnames'
    function Component() {
        return (
            <Fragment>
                <p
                    className={cs('color classe foo something py-2 mt-8 text-sm font-semibold', 'text-center text-white something else wow so many', true ? 'hello' : 'hi')}
                />
            </Fragment>
        )
    }
    "
`;

exports[`test eslint > callArgumentTooLong > fixed 1`] = `
"
    import { Fragment } from 'react'
    import cs from 'classnames'
    function Component() {
        return (
            <Fragment>
                <p
                    className={cs('color classe foo something py-2 mt-8 text-sm font-semibold', 'text-center text-white something else', true ? 'hello' : 'hi')}
                />
            </Fragment>
        )
    }
    "
`;

exports[`test eslint > simple > fixed 1`] = `
"import clsx from 'classnames'

    function Component() {
        return (
            <Fragment>
                <p
                    className={clsx('block w-full py-2 mt-8 text-sm font-semibold text-center', 'text-white bg-gray-900 border border-black rounded-md', 'w-[340px] disabled:opacity-60 hover:cursor-pointer', 'disabled:bg-gray-900 hover:bg-gray-700 sm:h-[60em]')}
                />
            </Fragment>
        )
    }
    "
`;

exports[`test eslint > withCsImport > fixed 1`] = `
"
    import { Fragment } from 'react'
    import cs from 'classnames'
    function Component() {
        return (
            <Fragment>
                <p
                    className={cs('color classe foo something py-2 mt-8 text-sm font-semibold', 'text-center text-white')}
                />
            </Fragment>
        )
    }
    "
`;

exports[`test eslint > withImports > fixed 1`] = `
"import clsx from 'classnames'

    import { Fragment } from 'react'
    function Component() {
        return (
            <Fragment>
                <p
                    className={clsx('block w-full py-2 mt-8 text-sm font-semibold text-center', 'text-white bg-gray-900 border border-black rounded-md', 'w-[340px] disabled:opacity-60 hover:cursor-pointer', 'disabled:bg-gray-900 hover:bg-gray-700 sm:h-[60em]')}
                />
            </Fragment>
        )
    }
    "
`;

exports[`test eslint > withManyClassnames > fixed 1`] = `
"import clsx from 'classnames'

    function Component() {
        return (
            <Fragment>
                <p className={clsx('block w-full py-2 mt-8 text-sm font-semibold text-center', 'text-white bg-gray-900 border border-black rounded-md', 'w-[340px] disabled:opacity-60 hover:cursor-pointer', 'disabled:bg-gray-900 hover:bg-gray-700 sm:h-[60em]')} />
                <p className={clsx('block w-full py-2 mt-8 text-sm font-semibold text-center', 'text-white bg-gray-900 border border-black rounded-md', 'w-[340px] disabled:opacity-60 hover:cursor-pointer', 'disabled:bg-gray-900 hover:bg-gray-700 sm:h-[60em]')} />
            </Fragment>
        )
    }
    
    "
`;

exports[`test eslint > withTemplateLiteral > fixed 1`] = `
"import clsx from 'classnames'

    import { Fragment } from 'react'
    function Component() {
        return (
            <Fragment>
                <p
                    className={clsx('color classe foo ', true ? 'hello' : 'hi', 'something py-2 mt-8 text-sm font-semibold text-center', 'text-white')}
                />
            </Fragment>
        )
    }
    "
`;

exports[`test eslint > withTypescript > fixed 1`] = `
"import clsx from 'classnames'

    function Component(x: SomeType) {
        return (
            <Fragment>
                <p
                    className={clsx('block w-full py-2 mt-8 text-sm font-semibold text-center', 'text-white bg-gray-900 border border-black rounded-md', 'w-[340px] disabled:opacity-60 hover:cursor-pointer', 'disabled:bg-gray-900 hover:bg-gray-700 sm:h-[60em]')}
                />
            </Fragment>
        )
    }
    "
`;
